house cleaning some dot stuff

--- a/hg/.hgrc
+++ b/hg/.hgrc
@@ -12,4 +12,8 @@ mq =
 transplant = 
 shelve = 
 
+[extdiff]
+cmd.kdiff3 =
 
+[merge-tools|merge-tools]
+kdiff3.args = $base $local $other -o $output
